force-app/main/default/objects/Opportunity/fields/AddressLine3__c.field-meta.xml
<CustomField>
    <fullName>AddressLine3__c</fullName>
    <label>AddressLine3</label>
    <length>255</length>
    <type>Text</type>
</CustomField>