force-app/main/default/objects/Opportunity/fields/Branch_Location__c.field-meta.xml
<CustomField>
    <fullName>Branch_Location__c</fullName>
    <label>Branch Location</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>HO</fullName>
            </value>
            <value>
                <fullName>Bathing Solutions</fullName>
            </value>
            <value>
                <fullName>NSD</fullName>
            </value>
            <value>
                <fullName>Key Accounts</fullName>
            </value>
            <value>
                <fullName>Vengeri</fullName>
            </value>
            <value>
                <fullName>Budget Buy</fullName>
            </value>
            <value>
                <fullName>Roof Tiles</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>