force-app/main/default/objects/Opportunity/fields/Corporation__c.field-meta.xml
<CustomField>
    <fullName>Corporation__c</fullName>
    <label>Corporation</label>
    <length>200</length>
    <type>Text</type>
</CustomField>