force-app/main/default/objects/Opportunity/fields/Difference_Amount__c.field-meta.xml
<CustomField>
    <fullName>Difference_Amount__c</fullName>
    <formula>Estimated_Amount__c - Amount</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Difference Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>