force-app/main/default/objects/Opportunity/fields/Is_New_Address__c.field-meta.xml
<CustomField>
    <fullName>Is_New_Address__c</fullName>
    <formula>AddressLine1__c != Account.Address_Line1__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is New Address</label>
    <type>Checkbox</type>
</CustomField>