force-app/main/default/objects/Opportunity/fields/Opportunity_Sub_Source__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Sub_Source__c</fullName>
    <label>Opportunity Sub Source</label>
    <length>255</length>
    <type>Text</type>
</CustomField>