force-app/main/default/objects/Opportunity/fields/Panchayath__c.field-meta.xml
<CustomField>
    <fullName>Panchayath__c</fullName>
    <label>Panchayath</label>
    <length>200</length>
    <type>Text</type>
</CustomField>