force-app/main/default/objects/Opportunity/fields/Product_Category__c.field-meta.xml
<CustomField>
    <fullName>Product_Category__c</fullName>
    <label>Product Category</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Tile</fullName>
            </value>
            <value>
                <fullName>Marble</fullName>
            </value>
            <value>
                <fullName>Granite</fullName>
            </value>
            <value>
                <fullName>Sanitary</fullName>
            </value>
            <value>
                <fullName>Fittings</fullName>
            </value>
            <value>
                <fullName>Roof tiles</fullName>
            </value>
            <value>
                <fullName>Kitchen sink</fullName>
            </value>
            <value>
                <fullName>Modular kitchen</fullName>
            </value>
            <value>
                <fullName>Pressure Pump</fullName>
            </value>
            <value>
                <fullName>Accessories</fullName>
            </value>
            <value>
                <fullName>Adhesives</fullName>
            </value>
            <value>
                <fullName>Surface solutions</fullName>
            </value>
            <value>
                <fullName>Wellness</fullName>
            </value>
            <value>
                <fullName>Lights</fullName>
            </value>
            <value>
                <fullName>Neotra</fullName>
            </value>
            <value>
                <fullName>Meghalaya</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>