force-app/main/default/objects/Opportunity/fields/Proposal_SLA_Deadline__c.field-meta.xml
<CustomField>
    <fullName>Proposal_SLA_Deadline__c</fullName>
    <formula>Proposal_Stage_Date__c + (18/24)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Proposal SLA Deadline</label>
    <type>DateTime</type>
</CustomField>