force-app/main/default/objects/Opportunity/fields/Proposal_Stage_Date__c.field-meta.xml
<CustomField>
    <fullName>Proposal_Stage_Date__c</fullName>
    <label>Proposal Stage Date</label>
    <type>DateTime</type>
</CustomField>