force-app/main/default/objects/Opportunity/fields/Reference_Name__c.field-meta.xml
<CustomField>
    <fullName>Reference_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Reference Name</label>
    <referenceTo>Architect__c</referenceTo>
    <relationshipLabel>Opportunities</relationshipLabel>
    <relationshipName>Opportunities</relationshipName>
    <type>Lookup</type>
</CustomField>