force-app/main/default/objects/Opportunity/fields/Referral_Name__c.field-meta.xml
<CustomField>
    <fullName>Referral_Name__c</fullName>
    <label>Referral Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>