force-app/main/default/objects/Opportunity/fields/Sale_Type__c.field-meta.xml
<CustomField>
    <fullName>Sale_Type__c</fullName>
    <description>Type of Sale: Retail, Project, Not for Sales, FGS</description>
    <label>Sale Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>RETAIL</fullName>
                <default>true</default>
                <label>RETAIL</label>
            </value>
            <value>
                <fullName>PROJECT</fullName>
            </value>
            <value>
                <fullName>NOT FOR SALE</fullName>
            </value>
            <value>
                <fullName>FGS</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>