force-app/main/default/objects/Opportunity/fields/Same_as_Account_Ship_Address__c.field-meta.xml
<CustomField>
    <fullName>Same_as_Account_Ship_Address__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Same as Account Ship Address</label>
    <type>Checkbox</type>
</CustomField>