force-app/main/default/objects/Opportunity/fields/Village__c.field-meta.xml
<CustomField>
    <fullName>Village__c</fullName>
    <label>Village</label>
    <length>200</length>
    <type>Text</type>
</CustomField>