force-app/main/default/objects/Opportunity/validationRules/closedate_shouldnt_be_earlier_than_today.validationRule-meta.xml
<ValidationRule>
    <fullName>closedate_shouldnt_be_earlier_than_today</fullName>
    <active>true</active>
    <errorConditionFormula>CloseDate &lt; 
IF(
    ISNEW(),
    TODAY(),
    DATEVALUE(CreatedDate)
)</errorConditionFormula>
    <errorMessage>Close Date cannot be earlier than the record creation date</errorMessage>
</ValidationRule>