force-app/main/default/objects/Opportunity/validationRules/State_and_pincode_validation.validationRule-meta.xml
<ValidationRule>
    <fullName>State_and_pincode_validation</fullName>
    <active>true</active>
    <errorConditionFormula>IF( Same_as_Account_Ship_Address__c  = FALSE  &amp;&amp;  (ISPICKVAL(State__c  , &apos;&apos;) ||  ISBLANK(Pin_Code__c )), TRUE, False)</errorConditionFormula>
    <errorDisplayField>State__c</errorDisplayField>
    <errorMessage>Please add State and Pin code.</errorMessage>
</ValidationRule>