force-app/main/default/objects/Opportunity/validationRules/Unqualified_Reason.validationRule-meta.xml
<ValidationRule>
    <fullName>Unqualified_Reason</fullName>
    <active>true</active>
    <errorConditionFormula>ISCHANGED( StageName) &amp;&amp; TEXT(StageName )== &apos;Closed Lost&apos; &amp;&amp; ISBLANK( TEXT(Lost_Reason__c) )</errorConditionFormula>
    <errorDisplayField>Lost_Reason__c</errorDisplayField>
    <errorMessage>Add the Lost Reason</errorMessage>
</ValidationRule>